update to Gradle 5.2.1, update to module structure, update to module ES server